--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,18 @@ _packages/*.*
 !_packages/*.zip
 assets/components/mostreadarticles/cache
 _build/gpm_resolvers/
+
+# cache files for sublime text
+*.tmlanguage.cache
+*.tmPreferences.cache
+*.stTheme.cache
+
+# workspace files are user-specific
+*.sublime-workspace
+
+# project files should be checked into the repository, unless a significant
+# proportion of contributors will probably not be using SublimeText
+*.sublime-project
+
+# sftp configuration file
+sftp-config.json
